fix the grid overflow and some other small updates

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,14 +1,16 @@
 .App {
   width: 80%;
   height: 80%;
-  margin: 0 auto;
-  display: block;
-
-  // display: flex;
+  margin: auto;
 
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, minmax(0, 1fr));
   grid-template-rows: 1fr 1fr;
-  gap: 5%;
+  gap: 2%;
   margin-top: 3%;
+}
+
+.presentationGrid {
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 2;
 }
