--- a/src/Components/Presentation/Presentation.module.scss
+++ b/src/Components/Presentation/Presentation.module.scss
@@ -1,12 +1,14 @@
 @import "../UI/Varibles.module.scss";
 
 .Presentation {
-  grid-row: 1 / span 2;
-  grid-column: 1 / span 2;
+  grid-row: 1 / 3;
+  grid-column: 1 / 3;
 }
 
 .getInTouchBtn {
+  display: block;
   margin: auto;
+  margin-top: 10%;
 }
 
 .getInTouchFront {
