--- a/src/Components/Presentation/TextName.module.scss
+++ b/src/Components/Presentation/TextName.module.scss
@@ -2,12 +2,15 @@
 
 .text {
   width: 100%;
+  box-sizing: border-box;
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  border-left: 2px solid black;
+  // border-left: 2px solid black;
+  border-radius: 15px;
   padding: 2%;
   background-color: yellow;
+  box-shadow: 0 0 20px gray;
   // padding-left: 5%;
   padding: 10% 5% 5% 5%;
   margin: 4% 0;
@@ -44,8 +47,10 @@
   right: 8%;
   background-color: $greenButton;
   color: whitesmoke;
-  font-weight: 700;
-  font-size: 1.6rem;
+  font-weight: 900;
+  font-size: 1.8rem;
   width: 30%;
-  transform: rotate(15deg);
+
+  @include animationShake;
+  transform: rotate(15deg) !important;
 }
