--- a/src/Components/ProjectCard/Screenshot.module.scss
+++ b/src/Components/ProjectCard/Screenshot.module.scss
@@ -19,7 +19,6 @@
 }
 
 .imgIcon {
-  background-color: green;
   position: absolute;
   top: 4%;
   right: 4%;
